Fixed spacing and arrows in grouped messages of the same user

--- a/client/src/features/chat/Message.module.scss
+++ b/client/src/features/chat/Message.module.scss
@@ -4,7 +4,7 @@
     min-width: 10px;
     align-self: end;
     padding: 4px 10px;
-    margin-bottom: 10px;
+    margin-top: 3px;
     background-color: $white;
     border-radius: 15px;
     position: relative;
@@ -13,19 +13,22 @@
     border-bottom: 1px solid $light-gray;
     border-left: 0;
 
+    &.arrow {
+        margin-top: 10px;
+    }
 
-    &::before {
+    &.arrow::before {
         content: "";
         position: absolute;
         right: 0%;
         top: 0%;
         width: 0;
         height: 0;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
         border-top: 15px solid;
         border-top-color: $white;
-        margin-right: -10px;
+        margin-right: -12px;
         clear: both;
     }
 
